# LifeReady

./: .env.example  .gitattributes  .gitattributes copy  .gitignore  .markdownlint.yml  .markdownlintignore  .yamllint.yaml  ARTIFACTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  NOTICE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_CONTACTS.md  SUPPORT.md  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  release-gates.yml  semantic-pr.yml  stale.yml
.trunk/: trunk.yaml
apps/lifeready_flutter/: pubspec.yaml
apps/lifeready_flutter/lib/: main.dart
apps/lifeready_flutter/lib/design/: generated_tokens.dart  theme.dart  tokens.dart  tokens_scope.dart
apps/lifeready_flutter/lib/design_system/: design_system_screen.dart  tokens_screen.dart
apps/lifeready_flutter/lib/design_system/components/: lr_badge.dart  lr_button.dart  lr_card.dart  lr_input.dart  lr_sheet.dart  lr_timeline_step.dart  lr_toast.dart
apps/lifeready_flutter/test/: widget_test.dart
apps/lifeready_flutter/tool/: generate_tokens.dart
docs/: PRD.md  audit-hashing-spec.md  copilot_scaffold_prompt.md  e2e-production-readiness-task-board.md  incident-workflow.md  retention-matrix.md  threat-model.md
docs/adr/: ADR-001-token-strategy.md  ADR-002-api-edge-controls.md  ADR-003-storage-export-model.md  ADR-004-audit-durability.md  ADR-005-e2e-quality-gates.md  README.md
docs/ops/: runbooks.md
docs/qa/: staging-e2e-report.md
docs/releases/: go-no-go-checklist.md
scripts/: generate-axum.sh  generate-flutter-tokens.sh  markdownlint.sh  upgrade-toolchain.sh  validate-openapi.sh
scripts/ci/: check_coverage_thresholds.sh  check_readyz_coverage.sh  check_release_artifacts.sh
services/audit-service/: Cargo.toml
services/audit-service/migrations/: 0001_init.sql  20250601000001_audit_init.sql
services/audit-service/src/: lib.rs  main.rs
services/audit-service/tests/: contract.rs
services/case-service/: Cargo.toml
services/case-service/migrations/: 0001_init.sql  20250601000004_case_init.sql  20250601000005_case_add_types.sql  20250601000006_phase3_packs_proof.sql  20250601000007_death_readiness_and_revisions.sql
services/case-service/src/: lib.rs  main.rs
services/case-service/tests/: db_integration.rs  export_integration.rs  smoke.rs
services/estate-service/: Cargo.toml
services/estate-service/migrations/: 0001_init.sql  20250601000002_estate_init.sql
services/estate-service/src/: lib.rs  main.rs
services/estate-service/tests/: rbac.rs  smoke.rs
services/identity-service/: Cargo.toml
services/identity-service/src/: lib.rs  main.rs
services/identity-service/tests/: smoke.rs
services/vault-service/: Cargo.toml
services/vault-service/migrations/: 0001_init.sql  20250601000003_vault_init.sql
services/vault-service/src/: lib.rs  main.rs
services/vault-service/tests/: db_integration.rs  rbac.rs  smoke.rs
tools/markdownlint/: package-lock.json  package.json
tools/openapi/: openapitools.json  package-lock.json  package.json
