[workspace]
resolver = "2"
members = [
  "services/audit-service",
  "services/identity-service",
  "services/estate-service",
  "services/vault-service",
  "services/case-service",
  "packages/audit-verifier",
  "packages/lifeready-auth",
  "packages/lifeready-policy",
  "packages/lifeready-audit",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tower = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
  "rust_crypto",
] }

lifeready-auth = { path = "packages/lifeready-auth" }
lifeready-policy = { path = "packages/lifeready-policy" }
lifeready-audit = { path = "packages/lifeready-audit" }

sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "rust_decimal",
] }
chrono = { version = "0.4.43", features = ["serde"] }
rust_decimal = { version = "1.37", features = ["serde"] }
