[package]
name = "audit-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.4"
