[package]
name = "audit_service"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
