[package]
name = "audit_service"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
lifeready-auth.workspace = true
lifeready-policy.workspace = true
lifeready-audit.workspace = true

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
