[package]
name = "case_service"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sqlx.workspace = true
chrono.workspace = true
lifeready-auth.workspace = true
lifeready-policy.workspace = true
lifeready-audit.workspace = true
sha2 = "0.10"
hex = "0.4"
rust_decimal.workspace = true
zip = { version = "8.0", default-features = false, features = ["deflate"] }
walkdir = "2.5"

[dev-dependencies]
lifeready-audit.workspace = true
bytes = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
audit_verifier = { path = "../../packages/audit-verifier" }
tempfile = "3.10"
vault_service = { path = "../vault-service" }
audit_service = { path = "../audit-service" }
