[package]
name = "identity_service"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sqlx.workspace = true
chrono.workspace = true

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
tower = "0.4"
