[package]
name = "vault_service"
version.workspace = true
edition.workspace = true

[features]
default = []
azure = []

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sqlx.workspace = true
chrono.workspace = true
lifeready-auth.workspace = true
lifeready-policy.workspace = true
lifeready-audit.workspace = true
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
